--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-hello World.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Puneeth Kumar P - Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .container {
+            margin-top: 50px;
+        }
+        .section-title {
+            margin-top: 30px;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <header class="text-center">
+            <h1>Puneeth Kumar P</h1>
+            <p>Full Stack Developer | MCA Student</p>
+            <p><a href="mailto:puneeth.09.2002@gmail.com">puneeth.09.2002@gmail.com</a> | +91 9353950078</p>
+            <p><a href="https://github.com/PuneethKumarPuni" target="_blank">GitHub Profile</a></p>
+        </header>
+
+        <section>
+            <h2 class="section-title">Objective</h2>
+            <p>Seeking to immerse myself in the dynamic IT sector as a motivated and eager-to-learn fresher, with the goal of gaining hands-on experience and expanding my knowledge base...</p>
+        </section>
+
+        <section>
+            <h2 class="section-title">Education</h2>
+            <ul>
+                <li>MCA, New Horizon College of Engineering, 2024-26</li>
+                <li>BCA, Sree Venkateshwara Degree College, CGPA: 9.4, 2021-24</li>
+                <li>PUC, Don Bosco PU College Chitradurga, 79.61%, 2019-21</li>
+                <li>SSLC, Shishu Mandir Education Center, 81.06%, 2018-19</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2 class="section-title">Skills</h2>
+            <h3>Technical Skills</h3>
+            <p>Java, C, MySQL, HTML, CSS, Bootstrap, Servlets, Hibernate</p>
+            <h3>Soft Skills</h3>
+            <p>Leadership, Willing to Learn, Team Building, Teamwork</p>
+        </section>
+
+        <section>
+            <h2 class="section-title">Experience</h2>
+            <h3>Full Stack Developer Intern</h3>
+            <p>Zenixus E-Learning PVT LTD, May 2024 - Jul 2024</p>
+            <ul>
+                <li>Interned as a Full Stack Developer in Spring Boot, Angular</li>
+                <li>Demonstrated proficiency in Unity...</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2 class="section-title">Projects</h2>
+            <ul>
+                <li><strong>Web Application for Reporting Cyber Crime:</strong> Developed a full-stack Java web application...</li>
+                <li><strong>CRUD Operations Web Application:</strong> Created a web application to demonstrate CRUD operations...</li>
+                <li><strong>Web-based Job Finding Site:</strong> Developed a full-stack web application using Angular and Spring...</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2 class="section-title">Leadership & Extracurricular Activities</h2>
+            <ul>
+                <li>President (2023-2024) & Vice President (2022-2023), Rotaract Club...</li>
+                <li>Technical Paper Presentation - Secured 1st prize...</li>
+            </ul>
+        </section>
+    </div>
+
+</body>
+</html>
