--- a/index.html
+++ b/index.html
@@ -1,82 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xml:lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puneeth Kumar P - Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            margin-top: 50px;
-        }
-        .section-title {
-            margin-top: 30px;
-        }
-    </style>
+
+    <link rel="icon" type="image/x-icon" href="profile.png" sizes="16x16">
+    
+
+  <title>Puneeth Kumar </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
 
-    <div class="container">
-        <header class="text-center">
-            <h1>Puneeth Kumar P</h1>
-            <p>Full Stack Developer | MCA Student</p>
-            <p><a href="mailto:puneeth.09.2002@gmail.com">puneeth.09.2002@gmail.com</a> | +91 9353950078</p>
-            <p><a href="https://github.com/PuneethKumarPuni" target="_blank">GitHub Profile</a></p>
-        </header>
+    <div class="nav-logo">
+      <img src="profile.png" alt="Logo" class="circular-image">
+  </div>
 
-        <section>
-            <h2 class="section-title">Objective</h2>
-            <p>Seeking to immerse myself in the dynamic IT sector as a motivated and eager-to-learn fresher, with the goal of gaining hands-on experience and expanding my knowledge base...</p>
-        </section>
 
-        <section>
-            <h2 class="section-title">Education</h2>
-            <ul>
-                <li>MCA, New Horizon College of Engineering, 2024-26</li>
-                <li>BCA, Sree Venkateshwara Degree College, CGPA: 9.4, 2021-24</li>
-                <li>PUC, Don Bosco PU College Chitradurga, 79.61%, 2019-21</li>
-                <li>SSLC, Shishu Mandir Education Center, 81.06%, 2018-19</li>
-            </ul>
-        </section>
+    <h1>My Profile</h1>
+    <ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="index.html">Home</a></li>
+    </ul>
+  </nav>
 
-        <section>
-            <h2 class="section-title">Skills</h2>
-            <h3>Technical Skills</h3>
-            <p>Java, C, MySQL, HTML, CSS, Bootstrap, Servlets, Hibernate</p>
-            <h3>Soft Skills</h3>
-            <p>Leadership, Willing to Learn, Team Building, Teamwork</p>
-        </section>
+  <section>
+    <h2>Welcome To My Personal Website!</h2>
+    <p>Live The Life In Your Own Way</p>
+    <a href="#about">Know Me !!</a>
+  </section>
 
-        <section>
-            <h2 class="section-title">Experience</h2>
-            <h3>Full Stack Developer Intern</h3>
-            <p>Zenixus E-Learning PVT LTD, May 2024 - Jul 2024</p>
-            <ul>
-                <li>Interned as a Full Stack Developer in Spring Boot, Angular</li>
-                <li>Demonstrated proficiency in Unity...</li>
-            </ul>
-        </section>
+  <section>
+    Here Are A Few Of My Projects
+  </section>
 
-        <section>
-            <h2 class="section-title">Projects</h2>
-            <ul>
-                <li><strong>Web Application for Reporting Cyber Crime:</strong> Developed a full-stack Java web application...</li>
-                <li><strong>CRUD Operations Web Application:</strong> Created a web application to demonstrate CRUD operations...</li>
-                <li><strong>Web-based Job Finding Site:</strong> Developed a full-stack web application using Angular and Spring...</li>
-            </ul>
-        </section>
+  <section>
+    <h2>Projects</h2>
 
-        <section>
-            <h2 class="section-title">Leadership & Extracurricular Activities</h2>
-            <ul>
-                <li>President (2023-2024) & Vice President (2022-2023), Rotaract Club...</li>
-                <li>Technical Paper Presentation - Secured 1st prize...</li>
-            </ul>
-        </section>
+    <div class="card">
+      <h2>FUN</h2>
+        Simple Web Page
+      <p><b>Click To Have A Look At THis </b></p>
+      <a href="She.html">
+        <button>See How It Works</button>
+        </a>
     </div>
-
+    <div class="card">
+      <h2>Customer Management</h2>
+        Customer DataBase Project
+      <p><b>Click To Veiw My Project Code</b></p>
+      <a href="https://github.com/PuneethKumarPuni/Project-Customer.git">
+        <button>Git Repository</button>
+        </a>
+    </div>
+    <div class="card">
+      <h2>Project 03</h2>
+        Rock Paper Sissor Game
+      <p><b>Click To Veiw My Project Code</b></p>
+      <a href="https://github.com/PuneethKumarPuni/Game.git">
+        <button>Git Repository</button>
+        </a>
+    </div>
+    <!-- <div class="card">
+      <h2>Project 04</h2>
+        AI ML ASSIGNMENT Car Price Prediction 
+      <p><b>Click To Veiw My Project Code</b></p>
+      <a href="#">
+        <button>Git Repository / Collab</button>
+        </a>
+    </div> -->
+  </section>
+  <footer class="container text-center">
+    <p><b> &copy; 2025 Puneeth  Kumar P. Contact For Any Queries <a href=""> puneethlegostar@gmail.com</a></b></p>
+  </footer>
 </body>
 </html>
