--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 
     <h1>My Profile</h1>
     <ul>
-    <li><a href="#about">About</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="error.html">About</a></li>
+    <li><a href="error.html">Contact</a></li>
+    <li><a href="error.html">Home</a></li>
     </ul>
   </nav>
 
   <section>
     <h2>Welcome To My Personal Website!</h2>
     <p>Live The Life In Your Own Way</p>
-    <a href="#about">Know Me !!</a>
+    <a href="error.html">Know Me !!</a>
   </section>
 
   <section>
@@ -45,7 +45,7 @@
       <h2>FUN</h2>
         Simple Web Page
       <p><b>Click To Have A Look At THis </b></p>
-      <a href="She.html">
+      <a href="error.html">
         <button>See How It Works</button>
         </a>
     </div>
