--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
   <nav>
-
+<!-- 
     <div class="nav-logo">
       <img src="profile.png" alt="Logo" class="circular-image">
-  </div>
+  </div> -->
 
 
     <h1>My Profile</h1>
