--- a/error.html
+++ b/error.html
@@ -63,7 +63,7 @@
 <body>
   <div class="error-container">
     <div class="error-code">404</div>
-    <img src="https://cdn.jsdelivr.net/gh/rotagen/404-illustration@main/astronaut.png" alt="Astronaut floating" class="astronaut">
+    <img src="spacewalk.png" alt="Astronaut floating" class="astronaut">
     <p class="error-message">Oops! Puneeth Is Working  on it he will add it</p>
     <a href="index.html" class="btn btn-primary btn-lg home-btn"><i class="fas fa-home"></i> Go to Home</a>
   </div>
